--- a/stylesheet.less
+++ b/stylesheet.less
@@ -605,6 +605,18 @@ footer span {
  .widget.paypalbuynow .widget.button.paypal:hover {
    background-color: darken(@color-swatch2,5%);
  }
+
+ /* ===============================
+   DROPBOX BUTTON
+   =============================== */
+
+ .widget.dropbox button  {
+   -webkit-border-radius: 2px;
+     -moz-border-radius: 2px;
+          border-radius: 2px;
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
+   text-shadow: 0 1px 0px rgba(0,0,0,0.3);
+ }
  
 
 /* ===============================
@@ -1108,13 +1120,11 @@ hr.line.align-right {
 }
 
 .widget.tweet a {
-  padding: 8px 10px 8px 32px;
+  padding: 8px 10px 8px 38px;
   margin: 0;
   border: none;
-  background-image: image('/images/twitter.png');
   background-repeat: no-repeat;
   background-position: 10px;
-
   margin: 0em;
   border: 0;
   -webkit-border-radius: 2px;
@@ -1132,8 +1142,7 @@ hr.line.align-right {
 }
 
 .widget.tweet a:hover, .tweet a:active {
-  padding: 8px 10px 8px 32px;
-  background-image: image('/images/twitter.png');
+  padding: 8px 10px 8px 38px;
   background-repeat: no-repeat;
   background-position: 10px;
   cursor: pointer;
