--- a/stylesheet.less
+++ b/stylesheet.less
@@ -337,7 +337,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget.extendednavigation a.pull {
-  display: none;
+  top:-58px;
 }
 
 .widget.extendednavigation ul {
@@ -1533,7 +1533,10 @@ hr.line.align-right {
 /* ===============================
    SLIDESHOW WIDGET
    =============================== */
-  
+.widget.responsiveslideshow {
+  min-height:initial;
+}
+
 .widget.responsiveslideshow .btn-play.pause:after,
 .widget.responsiveslideshow .btn-play:after {
   display: none;
@@ -1541,6 +1544,7 @@ hr.line.align-right {
 
 .widget.responsiveslideshow .slideshow-image-list {
     height: 300px;
+    min-height:initial;
 }
 
 .widget.responsiveslideshow .slideshow-widget {
@@ -1570,6 +1574,7 @@ hr.line.align-right {
 
 .widget.responsiveslideshow .slideshow-image-list {
     height:450px;
+    min-height:initial;
   }
 
 .widget.responsiveslideshow .title {
@@ -1687,30 +1692,7 @@ hr.line.align-right {
     float: left;
     width: 100%;
     min-height: 40px;
-  }
-
-  /* NAV ICON */
-
-  .widget .extendednavigation a.pull {
-    display: block;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30px;
-    height: 30px;
-  }
-
-  .widget .extendednavigation a.pull:after {
-    content:"";
-    background: image('/images/nav-icon.png') no-repeat center;
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
+}
 
     /* NAV */
 
@@ -1793,6 +1775,7 @@ hr.line.align-right {
   .widget.responsiveslideshow .slideshow-image-list, 
   .widget.responsiveslideshow .slideshow-widget {
     height:350px;
+    min-height:initial;
   }
 
   .widget.signupform fieldset input {
@@ -1924,6 +1907,7 @@ hr.line.align-right {
    .widget.responsiveslideshow .slideshow-image-list, 
   .widget.responsiveslideshow .slideshow-widget {
     height:200px;
+    min-height:initial;
   }
 
   
